istio-09-jwt/httpbin-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: oauth-apl
